<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_affected">

    <fragment
        android:id="@+id/nav_affected"
        android:name="com.ngengeapps.coronafeed.ui.affected.AffectedCountriesFragment"
        android:label="@string/menu_statistics"

        tools:layout="@layout/fragment_affected_countries">
    </fragment>


    <fragment
        android:id="@+id/nav_protect"
        android:name="com.ngengeapps.coronafeed.ui.protection.ProtectYourselfFragmentFragment"
        android:label="@string/menu_protect"
        tools:layout="@layout/fragment_protect" />

    <fragment
        android:id="@+id/nav_stay_safe_while_trvalleing"
        android:name="com.ngengeapps.coronafeed.ui.protect_while_travelling.StaySafeWhileTravellingFragment"
        android:label="@string/stay_safe_text"
        tools:layout="@layout/fragment_stay_safe_while_travelling" />
    <fragment
        android:id="@+id/nav_food_safety"
        android:name="com.ngengeapps.coronafeed.ui.practice_food.PracticeFoodSafetyFragment"
        android:label="@string/food_safety"
        tools:layout="@layout/fragment_practice_food_safety" />
    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.ngengeapps.coronafeed.AboutFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about" />
</navigation>